WEB | build: Install mailer and hwi for oauth2

--- a/projects/web/.env
+++ b/projects/web/.env
@@ -12,6 +12,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
+MAIL_SENDER=your_email
 MAILER_DSN=smtp://your_email:your_app_password@smtp.gmail.com:587
 ###< symfony/mailer ###
 
