--- a/projects/web/config/routes.yaml
+++ b/projects/web/config/routes.yaml
@@ -3,3 +3,9 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+login:
+    path: /login
+
+logout:
+    path: /logout
