--- a/projects/web/config/routes/hwi_oauth_routing.yaml
+++ b/projects/web/config/routes/hwi_oauth_routing.yaml
@@ -9,3 +9,6 @@ hwi_oauth_connect:
 hwi_oauth_login:
     resource: "@HWIOAuthBundle/Resources/config/routing/login.php"
     prefix:   /login
+
+google_login:
+    path: /login/with-google
