--- a/projects/web/config/packages/doctrine.yaml
+++ b/projects/web/config/packages/doctrine.yaml
@@ -14,6 +14,7 @@ doctrine:
             gender_enum: App\DBAL\Types\GenderEnumType
             size_enum: App\DBAL\Types\SizeEnumType
             status_enum: App\DBAL\Types\AnimalStatusType
+            found_animal_status_enum: App\DBAL\Types\FoundAnimalStatusType
         mapping_types:
             enum: string
     orm:
