WEB | feat: make register work

--- a/projects/web/.env
+++ b/projects/web/.env
@@ -4,7 +4,7 @@ APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="mysql://usuario:usuario1234@127.0.0.1:3306/petfinder?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://your_db_user:your_db_password@127.0.0.1:your_db_port/petfinder?serverVersion=8.0.32&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
