WEB | AUTH | feat: OAuth2 Basic implementation

--- a/projects/web/config/packages/security.yaml
+++ b/projects/web/config/packages/security.yaml
@@ -1,16 +1,12 @@
 security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
-        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: "auto"
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         # used to reload user from session & other features (e.g. switch_user)
         app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
-        hwi_provider:
-            id: hwi_oauth.user.provider
+            id: app.oauth.user_provider
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -31,14 +27,14 @@ security:
                 login_path: /connect/google
                 use_forward: false
                 failure_path: /login
-                default_target_path: /profile
+                default_target_path: /connect/google/check
 
                 # Service defined in HWI OAuth bundle to handle OAuth
                 oauth_user_provider:
-                    service: hwi_oauth.user.provider
+                    service: app.oauth.user_provider
 
             # Key of the provider defined earlier
-            provider: hwi_provider
+            provider: app_user_provider
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
