--- a/projects/web/config/services.yaml
+++ b/projects/web/config/services.yaml
@@ -4,6 +4,7 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    app.uploads_dir: "%kernel.project_dir%/public/uploads"
 
 services:
     # default configuration for services in *this* file
@@ -29,3 +30,8 @@ services:
         arguments:
             - '@App\Repository\UserRepository'
             - "@security.user_password_hasher"
+
+    # File Upload Service
+    App\Service\FileUploadService:
+        arguments:
+            $uploadsDir: "%app.uploads_dir%"
