WEB | STYLES | feat: style navigation component
- Create generalized icon component

--- a/projects/web/package.json
+++ b/projects/web/package.json
@@ -19,7 +19,7 @@
     "scripts": {
         "dev-server": "encore dev-server",
         "dev": "encore dev",
-        "watch": "encore dev --watch",
+        "watch": "encore dev --watch & while true; do sleep 2; php bin/console cache:clear --no-warmup; done",
         "build": "encore production --progress"
     },
     "dependencies": {
