DB | config: replace status type configuration
- Instead of having one type for lost and another for found, both are encapsulated in animals

--- a/projects/web/config/packages/doctrine.yaml
+++ b/projects/web/config/packages/doctrine.yaml
@@ -13,8 +13,7 @@ doctrine:
         types:
             gender_enum: App\DBAL\Types\GenderEnumType
             size_enum: App\DBAL\Types\SizeEnumType
-            status_enum: App\DBAL\Types\AnimalStatusType
-            found_animal_status_enum: App\DBAL\Types\FoundAnimalStatusType
+            animal_status_enum: App\DBAL\Types\AnimalStatusType
         mapping_types:
             enum: string
     orm:
