WEB | ADMIN | feat: prevent shelter with peding verification to access

--- a/projects/web/config/packages/security.yaml
+++ b/projects/web/config/packages/security.yaml
@@ -27,6 +27,7 @@ security:
                 enable_csrf: false
                 default_target_path: /user
                 failure_path: /auth/login
+                success_handler: app.security.authentication_success_handler
 
             # Configuración para OAuth
             oauth:
