--- a/projects/Dockerfile
+++ b/projects/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:8.2-fpm
 
-# Instalar Nginx y extensiones necesarias para Symfony
+# Instalar Nginx, extensiones necesarias y utilidades
 RUN apt-get update && apt-get install -y \
     nginx git unzip libicu-dev libzip-dev zlib1g-dev \
     && docker-php-ext-install intl pdo pdo_mysql zip opcache \
@@ -9,7 +9,10 @@ RUN apt-get update && apt-get install -y \
 # Instalar Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# Configurar Nginx para Symfony (puerto 80, root en /var/www/html/public)
+# Cambiar PHP-FPM para que escuche en TCP 9000 en lugar de socket Unix
+RUN sed -i 's|listen = /var/run/php/php8.2-fpm.sock|listen = 9000|' /usr/local/etc/php-fpm.d/www.conf
+
+# Configurar Nginx (escucha en puerto 80)
 RUN echo 'server { \
     listen 80; \
     server_name _; \
@@ -27,16 +30,19 @@ RUN echo 'server { \
     } \
 }' > /etc/nginx/sites-available/default
 
-# Establecer directorio de trabajo y copiar el proyecto Symfony desde la carpeta web
+# Copiar proyecto Symfony al directorio de trabajo
 WORKDIR /var/www/html
 COPY web/ /var/www/html/
 
 # Ajustar permisos para www-data
 RUN chown -R www-data:www-data /var/www/html
 
-# Copiar script para arrancar php-fpm y nginx juntos
+# Copiar script de arranque que inicie php-fpm y nginx juntos
 COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
 RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 
-# Comando para iniciar el contenedor (php-fpm en background + nginx en foreground)
+# Exponer puerto 80 para Elastic Beanstalk o Docker
+EXPOSE 80
+
+# Comando por defecto para arrancar PHP-FPM y Nginx
 CMD ["/usr/local/bin/docker-entrypoint.sh"]
