--- a/.github/workflows/deploy-destroy.yaml
+++ b/.github/workflows/deploy-destroy.yaml
@@ -57,10 +57,8 @@ jobs:
               run: terraform apply -auto-approve
 
             - name: Subir tfstate como artefacto
-              uses: actions/upload-artifact@v4.4.3
-              with:
-                  name: terraform-tfstate
-                  path: ./infra/terraform/terraform.tfstate
+              working-directory: ./infra/terraform
+              run: aws s3 cp terraform.tfstate s3://petfinderuniquebucketfromeriktortajadarodriguez/terraform.tfstate
 
     destroy:
         if: github.event.inputs.action == 'destroy'
@@ -69,12 +67,6 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v4.2.1
 
-            - name: Descargar tfstate como artefacto
-              uses: actions/download-artifact@v4.1.8
-              with:
-                  name: terraform-tfstate
-                  path: ./infra/terraform/
-
             - name: pasar mis tokens a aws
               uses: aws-actions/configure-aws-credentials@v4
               with:
@@ -82,6 +74,10 @@ jobs:
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                   aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
                   aws-region: "us-east-1"
+
+            - name: Descargar tfstate como artefacto
+              working-directory: ./infra/terraform
+              run: aws s3 cp s3://petfinderuniquebucketfromeriktortajadarodriguez/terraform.tfstate terraform.tfstate
 
             - name: Hacer el set up de tf
               uses: hashicorp/setup-terraform@v3
