README | update readme

--- a/projects/web/.env
+++ b/projects/web/.env
@@ -20,3 +20,8 @@ MAILER_DSN=smtp://your_email:your_app_password@smtp.gmail.com:587
 GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your_google_client_secret
 ###< hwi/oauth-bundle ###
+
+###> telegram/bot ###
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token
+TELEGRAM_CHAT_ID=your_telegram_chat_id
+###< telegram/bot ###
